--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "nanoid": "^3.1.16",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-scripts": "3.4.3",
-    "tailwindcss": "^1.8.11",
-    "use-clippy": "^1.0.8"
+    "tailwindcss": "^1.8.11"
   },
   "scripts": {
     "build:tailwind": "tailwind build src/tailwind.css -o src/tailwind.output.css",
